remove console logs and pushed contact me down at smallest width to prevent url bar covering contact text

--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,9 @@ img[data-src] {
 }
 
 @media only screen and (max-width: 400px) {
+  #contact {
+    margin-top: 100px;
+  }
   .title {
     padding-top: 15px;
   }
